Project Structure and TOML

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+################################### ENVS ######################################
+# JetBrains
+.idea/
+# Microsoft Visual Studio Code
+.vscode/
+
+################################## PYTHON #####################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
